--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="card">
         <header>
                 <div class="profile-pic">
-                    <img src="WhatsApp Image 2025-10-12 at 23.13.33.jpeg" alt="Foto Profil Moh. Ridwan ">
+                    <img src="/gibran.id/WhatsApp Image 2025-10-12 at 23.13.33.jpeg" alt="Foto Profil Moh. Ridwan ">
                 </div>
                 <h1>@MOH_RIDWAN</h1>
                 <p class="bio"> Dewan Eksekutif Mahasiswa Fakultas Sains Dan Teknologi </p>
@@ -53,4 +53,5 @@
         <p>&copy; 2025 MyLinkTree | MOH. RIDWAN | META</p>
      </footer>
 </body>
+
 </html>
